@@ -1,5 +1,12 @@
 2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify1_ps-op_in): Fix diagnostics.
+	* testsuite/poke.pkl/in-diag-3.pk: Adapt expected error.
+	* testsuite/poke.pkl/in-diag-1.pk: Likewise.
+	* testsuite/poke.pkl/in-diag-2.pk: Likewise.
+
+2022-01-19  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* libpoke/pkl-typify.c (pkl_typify1_ps_bin): New handler.
 	(pkl_phase_typify1): Use new handler for IOS, XOR, BAND, SUB, DIV,
 	CEILDIV, MOD and ADD.
